--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,12 @@ repositories {
 
 dependencies {
     testImplementation 'org.testng:testng:7.6.1'
-    implementation 'org.seleniumhq.selenium:selenium-java:4.5.0'
+    //implementation 'org.seleniumhq.selenium:selenium-java:4.5.0'
+    // https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
+    implementation 'org.seleniumhq.selenium:selenium-java:4.20.0'
+
     testImplementation 'io.github.bonigarcia:webdrivermanager:5.8.0'
+
 }
 
 test {
